--- a/sabores/cadastro.html
+++ b/sabores/cadastro.html
@@ -9,7 +9,8 @@
 </head>
 <body class="bg-light">
 
-    <header class="bg-primary text-white py-3 shadow-sm">
+    <header class="header-verde py-3 shadow-sm">
+
         <div class="container d-flex justify-content-between align-items-center">
           <a href="index.html" class="text-white text-decoration-none fs-4 fw-bold">🍲 Sabores e Temperos</a>
           <nav>
@@ -52,10 +53,96 @@
     </div>
   </div>
 
+  <!-- Seção: Mais Receitas -->
+<section class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Receitas</h2>
+    <div class="row g-4">
+      <!-- Card 4 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/panqueca.png" class="card-img-top" alt="Panqueca">
+          <div class="card-body">
+            <h5 class="card-title">Panqueca Recheada</h5>
+            <p class="card-text">Recheada com carne moída e molho especial.</p>
+            <a href="receita.php?id=4" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 5 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/pudim.png" class="card-img-top" alt="Pudim de Leite">
+          <div class="card-body">
+            <h5 class="card-title">Pudim de Leite</h5>
+            <p class="card-text">Tradicional, cremoso e com calda de caramelo.</p>
+            <a href="receita.php?id=5" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 6 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/rondelli.png" class="card-img-top" alt="Rondelli">
+          <div class="card-body">
+            <h5 class="card-title">Rondelli ao Molho Branco</h5>
+            <p class="card-text">Recheado com presunto e queijo, coberto com molho branco.</p>
+            <a href="receita.php?id=6" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 7 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/feijoada.png" class="card-img-top" alt="Feijoada">
+          <div class="card-body">
+            <h5 class="card-title">Feijoada Completa</h5>
+            <p class="card-text">Tradicional prato brasileiro com carnes e feijão preto.</p>
+            <a href="receita.php?id=7" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 8 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/frango assado.png" class="card-img-top" alt="Frango Assado">
+          <div class="card-body">
+            <h5 class="card-title">Frango Assado</h5>
+            <p class="card-text">Frango temperado assado com batatas douradas.</p>
+            <a href="receita.php?id=8" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 9 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/escondidinho.png" class="card-img-top" alt="Escondidinho">
+          <div class="card-body">
+            <h5 class="card-title">Escondidinho de Carne</h5>
+            <p class="card-text">Com purê de batata e carne seca desfiada.</p>
+            <a href="receita.php?id=9" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+      <!-- Card 10 -->
+      <div class="col-md-3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/images/tortamaca.png" class="card-img-top" alt="Torta de Maçã">
+          <div class="card-body">
+            <h5 class="card-title">Torta de Maçã</h5>
+            <p class="card-text">Clássica torta americana com toque de canela.</p>
+            <a href="receita.php?id=10" class="btn btn-outline-primary">Ver Receita</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <div class="container">
-      <p class="mb-1">&copy; 2025 Gabriel | Sabores e Temperos</p>
-      <small>Feito com ♥ usando Bootstrap</small>
+      <p class="mb-1">&copy; 2025 | Sabores e Temperos</p>
+      <small></small>
     </div>
   </footer>
 
