--- a/sabores/cadastro.html
+++ b/sabores/cadastro.html
@@ -43,7 +43,7 @@
               <label for="confirmaSenha" class="form-label">Confirmar Senha</label>
               <input type="password" class="form-control" id="confirmaSenha" name="confirmaSenha" required />
             </div>
-            <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
+            <button type="submit" class="btn btn-verde w-100">Cadastrar</button>
             <div class="text-center mt-3">
               <a href="login.html">Já tem uma conta? Entrar</a>
             </div>
