--- a/sabores/bolo.html
+++ b/sabores/bolo.html
@@ -1,13 +1,3 @@
-<?php
-session_start();
-
-// Simulação de ID da receita (pode vir do banco ou ser fixo)
-$receita_id = 1;
-
-// Verifica se o usuário está logado
-$usuario_logado = isset($_SESSION['usuario_id']);
-?>
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,12 +5,14 @@ $usuario_logado = isset($_SESSION['usuario_id']);
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolo de Chocolate - Site de Receitas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/header.css" />
     <style>
         body {
             background-color: #f6fff7;
         }
         .navbar, footer {
-            background-color: #2f4f2f !important;
+            background-color: #2e7d32 !important;
         }
         .nav-link, .navbar-brand, footer p {
             color: #c9f7c4 !important;
@@ -35,25 +27,29 @@ $usuario_logado = isset($_SESSION['usuario_id']);
         .btn-success:hover {
             background-color: #2e8b57;
         }
+      
     </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
-    <div class="container">
-        <a class="navbar-brand" href="index.php">Site de Receitas</a>
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.php">Início</a></li>
-            <li class="nav-item"><a class="nav-link" href="receitas.php">Receitas</a></li>
-            <?php if ($usuario_logado): ?>
-                <li class="nav-item"><a class="nav-link" href="logout.php">Sair</a></li>
-            <?php else: ?>
-                <li class="nav-item"><a class="nav-link" href="login.php">Entrar</a></li>
-            <?php endif; ?>
-        </ul>
+
+<header class="custom-header d-flex align-items-center justify-content-between flex-wrap px-5 py-3 shadow">
+    <a href="index.html" class="d-flex align-items-center gap-2 text-decoration-none">
+      <img src="assets/images/logo.png" alt="Logo do site" class="logo-img">
+      <h1 class="logo-text m-0 text-white fs-4">Sabores e Temperos</h1>
+    </a>
+  
+    <nav class="nav-links d-flex gap-4 flex-wrap justify-content-center">
+      <a href="index.html" class="nav-link">Início</a>
+      <a href="inserir.html" class="nav-link">Insira sua receita</a>
+      <a href="cadastro.html" class="nav-link">Conta</a>
+    </nav>
+  
+    <div class="search-box mt-2 mt-md-0">
+      <input type="text" placeholder="Buscar receitas..." class="form-control search-input">
     </div>
-</nav>
+  </header>
 
 <!-- Página da Receita -->
 <div class="container my-5">
@@ -113,11 +109,13 @@ $usuario_logado = isset($_SESSION['usuario_id']);
 </div>
 
 <!-- Footer -->
-<footer class="text-white text-center py-4">
-    <div class="container">
-        <p>&copy; 2025 Gabriel | Site de Receitas</p>
+<footer class="background-color text-white mt-3 p-3 text-center">
+    <div class="text-center">
+      <p class="mb-0">&copy; 2025 | Sabores e Temperos - Todos os direitos reservados.</p>
     </div>
-</footer>
+    <small>Receitas com carinho para sua cozinha.</small>
+  </footer>
+  
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
