--- a/sabores/escondidinho.html
+++ b/sabores/escondidinho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasanha de Carne - Site de Receitas</title>
+    <title>Escondidinho de Carne - Site de Receitas</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/header.css" />
@@ -27,7 +27,6 @@
         .btn-success:hover {
             background-color: #2e8b57;
         }
-       
     </style>
 </head>
 <body>
@@ -54,34 +53,34 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="assets/images/lasanha.png" class="img-fluid" alt="Lasanha de Carne">
+            <img src="assets/images/escondidinho.png" class="img-fluid" alt="Escondidinho de Carne">
         </div>
         <div class="col-md-6">
-            <h1>Lasanha de Carne</h1>
-            <p><strong>Descrição:</strong> Uma clássica e suculenta lasanha de carne moída, com molho vermelho, molho branco e bastante queijo. Perfeita para o almoço em família.</p>
+            <h1>Escondidinho de Carne</h1>
+            <p><strong>Descrição:</strong> Uma receita deliciosa de escondidinho com purê de batata cremoso e recheio suculento de carne moída bem temperada.</p>
 
             <h3>Ingredientes:</h3>
             <ul>
                 <li>500g de carne moída</li>
-                <li>1 pacote de massa para lasanha</li>
                 <li>1 cebola picada</li>
                 <li>2 dentes de alho picados</li>
                 <li>2 colheres de sopa de óleo</li>
-                <li>1 lata de molho de tomate</li>
-                <li>500ml de leite</li>
-                <li>2 colheres de sopa de farinha de trigo</li>
-                <li>2 colheres de sopa de manteiga</li>
-                <li>300g de queijo mussarela</li>
-                <li>Sal, pimenta e noz-moscada a gosto</li>
+                <li>2 colheres de sopa de extrato de tomate</li>
+                <li>Sal e pimenta a gosto</li>
+                <li>Cheiro-verde a gosto</li>
+                <li>5 batatas médias cozidas e amassadas</li>
+                <li>1 colher de sopa de manteiga</li>
+                <li>1/2 xícara de leite</li>
+                <li>100g de queijo mussarela ralado</li>
             </ul>
 
             <h3>Modo de Preparo:</h3>
             <ol>
                 <li>Refogue a cebola e o alho no óleo, adicione a carne moída e cozinhe até dourar.</li>
-                <li>Acrescente o molho de tomate, tempere com sal e pimenta, e deixe cozinhar por 10 minutos.</li>
-                <li>Para o molho branco, derreta a manteiga, adicione a farinha e cozinhe por 1 minuto. Adicione o leite aos poucos, mexendo até engrossar. Tempere com sal e noz-moscada.</li>
-                <li>Em um refratário, monte camadas de massa, carne, molho branco e queijo, repetindo até acabar os ingredientes. Finalize com queijo.</li>
-                <li>Asse em forno preaquecido a 180°C por 30 minutos ou até gratinar.</li>
+                <li>Acrescente o extrato de tomate, tempere com sal, pimenta e cheiro-verde. Reserve.</li>
+                <li>Prepare o purê misturando a batata amassada com manteiga e leite até ficar cremoso.</li>
+                <li>Em um refratário, espalhe metade do purê, cubra com a carne e finalize com o restante do purê.</li>
+                <li>Polvilhe o queijo por cima e leve ao forno a 200°C por 20 minutos ou até gratinar.</li>
             </ol>
 
             <a href="receitas.php" class="btn btn-secondary mt-3">Voltar às receitas</a>
