--- a/sabores/frango.html
+++ b/sabores/frango.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasanha de Carne - Site de Receitas</title>
+    <title>Frango Assado - Site de Receitas</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/header.css" />
@@ -27,7 +27,7 @@
         .btn-success:hover {
             background-color: #2e8b57;
         }
-       
+        
     </style>
 </head>
 <body>
@@ -50,38 +50,37 @@
     </div>
   </header>
 
+
 <!-- Página da Receita -->
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="assets/images/lasanha.png" class="img-fluid" alt="Lasanha de Carne">
+            <img src="assets/images/frango assado.png" class="img-fluid" alt="Frango Assado">
         </div>
         <div class="col-md-6">
-            <h1>Lasanha de Carne</h1>
-            <p><strong>Descrição:</strong> Uma clássica e suculenta lasanha de carne moída, com molho vermelho, molho branco e bastante queijo. Perfeita para o almoço em família.</p>
+            <h1>Frango Assado</h1>
+            <p><strong>Descrição:</strong> Um clássico frango assado bem temperado e douradinho, ideal para almoços em família ou ocasiões especiais.</p>
 
             <h3>Ingredientes:</h3>
             <ul>
-                <li>500g de carne moída</li>
-                <li>1 pacote de massa para lasanha</li>
-                <li>1 cebola picada</li>
-                <li>2 dentes de alho picados</li>
-                <li>2 colheres de sopa de óleo</li>
-                <li>1 lata de molho de tomate</li>
-                <li>500ml de leite</li>
-                <li>2 colheres de sopa de farinha de trigo</li>
-                <li>2 colheres de sopa de manteiga</li>
-                <li>300g de queijo mussarela</li>
-                <li>Sal, pimenta e noz-moscada a gosto</li>
+                <li>1 frango inteiro limpo (aprox. 2kg)</li>
+                <li>4 dentes de alho amassados</li>
+                <li>Suco de 1 limão</li>
+                <li>1 colher de sopa de mostarda</li>
+                <li>1 colher de sopa de páprica doce</li>
+                <li>1 colher de chá de pimenta-do-reino</li>
+                <li>Sal a gosto</li>
+                <li>3 colheres de sopa de manteiga ou margarina</li>
+                <li>Ramos de alecrim (opcional)</li>
             </ul>
 
             <h3>Modo de Preparo:</h3>
             <ol>
-                <li>Refogue a cebola e o alho no óleo, adicione a carne moída e cozinhe até dourar.</li>
-                <li>Acrescente o molho de tomate, tempere com sal e pimenta, e deixe cozinhar por 10 minutos.</li>
-                <li>Para o molho branco, derreta a manteiga, adicione a farinha e cozinhe por 1 minuto. Adicione o leite aos poucos, mexendo até engrossar. Tempere com sal e noz-moscada.</li>
-                <li>Em um refratário, monte camadas de massa, carne, molho branco e queijo, repetindo até acabar os ingredientes. Finalize com queijo.</li>
-                <li>Asse em forno preaquecido a 180°C por 30 minutos ou até gratinar.</li>
+                <li>Preaqueça o forno a 200°C.</li>
+                <li>Misture todos os temperos em uma tigela e esfregue bem sobre o frango, por dentro e por fora.</li>
+                <li>Deixe marinando por pelo menos 1 hora (de preferência de um dia para o outro na geladeira).</li>
+                <li>Coloque o frango em uma assadeira, distribua a manteiga por cima e, se quiser, coloque ramos de alecrim.</li>
+                <li>Leve ao forno por cerca de 1h30, regando com o próprio molho de tempos em tempos, até ficar bem dourado e cozido por dentro.</li>
             </ol>
 
             <a href="receitas.php" class="btn btn-secondary mt-3">Voltar às receitas</a>
@@ -119,7 +118,6 @@
     <small>Receitas com carinho para sua cozinha.</small>
   </footer>
   
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
