--- a/sabores/inserir.html
+++ b/sabores/inserir.html
@@ -4,20 +4,120 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Insira sua Receita</title>
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/css/inserir.css" />
+  <style>
+     .custom-header {
+  background: linear-gradient(90deg, #388e3c, #66bb6a);
+  border-radius: 12px;
+  margin: 10px;
+  gap: 10px;
+  flex-wrap: wrap;
+  transition: background 0.4s ease;
+}
+
+.logo-img {
+  height: 60px;
+  width: auto;
+}
+
+.logo-text {
+  font-family: 'Segoe UI', sans-serif;
+  font-weight: 600;
+}
+
+.nav-links a {
+  color: white;
+  font-weight: 500;
+  font-size: 1.1rem;
+  text-decoration: none;
+  position: relative;
+  padding-bottom: 4px;
+}
+
+.nav-links a::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: white;
+  transition: width 0.3s;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.nav-links a:hover::after {
+  width: 100%;
+}
+
+.search-box {
+  flex-shrink: 1;
+}
+
+.search-input {
+  border-radius: 20px;
+  padding: 8px 16px;
+  border: none;
+  width: 220px;
+  max-width: 100%;
+  outline: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.search-input:focus {
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+}
+
+@media (max-width: 768px) {
+  .custom-header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .nav-links {
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .search-box {
+    margin-top: 10px;
+  }
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex: 1;
+}
+   footer {
+    background-color: #2e7d32
+    }
+    </style>
 </head>
 
 <body class="bg-light">
 
-  <header class="header-verde py-3 shadow-sm">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a href="index.html" class="text-white text-decoration-none fs-4 fw-bold">🍲 Sabores e Temperos</a>
-      <nav>
-        <a href="index.html" class="text-white text-decoration-none me-3">Início</a>
-        <a href="receitas.php" class="text-white text-decoration-none me-3">Receitas</a>
-        <a href="login.html" class="btn btn-light btn-sm">Entrar</a>
-      </nav>
+  <header class="custom-header d-flex align-items-center justify-content-between flex-wrap px-5 py-3 shadow">
+    <a href="index.html" class="d-flex align-items-center gap-2 text-decoration-none">
+      <img src="assets/images/logo.png" alt="Logo do site" class="logo-img">
+      <h1 class="logo-text m-0 text-white fs-4">Sabores e Temperos</h1>
+    </a>
+  
+    <nav class="nav-links d-flex gap-4 flex-wrap justify-content-center">
+      <a href="index.html" class="nav-link">Início</a>
+      <a href="inserir.html" class="nav-link">Insira sua receita</a>
+      <a href="cadastro.html" class="nav-link">Conta</a>
+    </nav>
+  
+    <div class="search-box mt-2 mt-md-0">
+      <input type="text" placeholder="Buscar receitas..." class="form-control search-input">
     </div>
   </header>
 
@@ -48,12 +148,13 @@
     </div>
   </main>
 
-  <footer class="bg-dark text-white text-center py-4 mt-5">
-    <div class="container">
-      <p class="mb-1">&copy; 2025 | Sabores e Temperos</p>
-      <small>Feito com ♥</small>
-    </div>
-  </footer>
+<!-- Footer -->
+<footer class="background-color text-white mt-3 p-3 text-center">
+  <div class="text-center">
+    <p class="mb-0">&copy; 2025 | Sabores e Temperos - Todos os direitos reservados.</p>
+  </div>
+  <small>Receitas com carinho para sua cozinha.</small>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
