--- a/sabores/torta.html
+++ b/sabores/torta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasanha de Carne - Site de Receitas</title>
+    <title>Torta de Maçã - Site de Receitas</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/header.css" />
@@ -27,7 +27,7 @@
         .btn-success:hover {
             background-color: #2e8b57;
         }
-       
+        
     </style>
 </head>
 <body>
@@ -50,38 +50,36 @@
     </div>
   </header>
 
+
 <!-- Página da Receita -->
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="assets/images/lasanha.png" class="img-fluid" alt="Lasanha de Carne">
+            <img src="assets/images/tortamaca.png" class="img-fluid" alt="Torta de Maçã">
         </div>
         <div class="col-md-6">
-            <h1>Lasanha de Carne</h1>
-            <p><strong>Descrição:</strong> Uma clássica e suculenta lasanha de carne moída, com molho vermelho, molho branco e bastante queijo. Perfeita para o almoço em família.</p>
+            <h1>Torta de Maçã</h1>
+            <p><strong>Descrição:</strong> Uma torta clássica e irresistível, com recheio de maçãs caramelizadas e massa crocante. Perfeita para a sobremesa ou lanche da tarde!</p>
 
             <h3>Ingredientes:</h3>
             <ul>
-                <li>500g de carne moída</li>
-                <li>1 pacote de massa para lasanha</li>
-                <li>1 cebola picada</li>
-                <li>2 dentes de alho picados</li>
-                <li>2 colheres de sopa de óleo</li>
-                <li>1 lata de molho de tomate</li>
-                <li>500ml de leite</li>
+                <li>4 maçãs descascadas e fatiadas</li>
+                <li>1 xícara de açúcar</li>
+                <li>1 colher de chá de canela em pó</li>
+                <li>1 colher de sopa de suco de limão</li>
                 <li>2 colheres de sopa de farinha de trigo</li>
-                <li>2 colheres de sopa de manteiga</li>
-                <li>300g de queijo mussarela</li>
-                <li>Sal, pimenta e noz-moscada a gosto</li>
+                <li>Massa pronta ou caseira para torta (base e cobertura)</li>
+                <li>1 colher de sopa de manteiga</li>
+                <li>1 ovo batido (para pincelar)</li>
             </ul>
 
             <h3>Modo de Preparo:</h3>
             <ol>
-                <li>Refogue a cebola e o alho no óleo, adicione a carne moída e cozinhe até dourar.</li>
-                <li>Acrescente o molho de tomate, tempere com sal e pimenta, e deixe cozinhar por 10 minutos.</li>
-                <li>Para o molho branco, derreta a manteiga, adicione a farinha e cozinhe por 1 minuto. Adicione o leite aos poucos, mexendo até engrossar. Tempere com sal e noz-moscada.</li>
-                <li>Em um refratário, monte camadas de massa, carne, molho branco e queijo, repetindo até acabar os ingredientes. Finalize com queijo.</li>
-                <li>Asse em forno preaquecido a 180°C por 30 minutos ou até gratinar.</li>
+                <li>Pré-aqueça o forno a 180°C.</li>
+                <li>Em uma tigela, misture as maçãs com açúcar, canela, limão e farinha.</li>
+                <li>Forre uma forma com a base da massa, adicione o recheio e coloque pedacinhos de manteiga por cima.</li>
+                <li>Cubra com o restante da massa, faça cortes pequenos para ventilação e pincele com o ovo batido.</li>
+                <li>Asse por cerca de 40 minutos ou até dourar bem.</li>
             </ol>
 
             <a href="receitas.php" class="btn btn-secondary mt-3">Voltar às receitas</a>
