Verificação do email

--- a/Sabores e Temperos/index.html
+++ b/Sabores e Temperos/index.html
@@ -161,7 +161,7 @@ footer{
   <nav class="nav-links d-flex gap-4 flex-wrap justify-content-center">
     <a href="receitas.html" class="nav-link">Receitas</a>
     <a href="inserir.html" class="nav-link">Insira sua receita</a>
-    <a href="cadastro.html" class="nav-link">Conta</a>
+    <a href="cadastro_redirect.php" class="nav-link">Conta</a>
   </nav>
 
   <div class="search-box mt-2 mt-md-0">
