--- a/Sabores e Temperos/cadastro.html
+++ b/Sabores e Temperos/cadastro.html
@@ -115,7 +115,8 @@ main {
     <nav class="nav-links d-flex gap-4 flex-wrap justify-content-center">
       <a href="index.html" class="nav-link">Início</a>
       <a href="inserir.html" class="nav-link">Insira sua receita</a>
-      <a href="cadastro.html" class="nav-link">Conta</a>
+      <a href="cadastro_redirect.php" class="nav-link">Conta</a>
+
     </nav>
   
     <div class="search-box mt-2 mt-md-0">
