--- a/Sabores e Temperos/login.html
+++ b/Sabores e Temperos/login.html
@@ -107,14 +107,14 @@
 <body class="bg-light">
 
   <header class="custom-header d-flex align-items-center justify-content-between flex-wrap px-5 py-3 shadow">
-    <a href="index.html" class="d-flex align-items-center gap-2 text-decoration-none">
+    <a href="index.php" class="d-flex align-items-center gap-2 text-decoration-none">
       <img src="assets/images/logo.png" alt="Logo do site" class="logo-img">
       <h1 class="logo-text m-0 text-white fs-4">Sabores e Temperos</h1>
     </a>
 
     <nav class="nav-links d-flex gap-4 flex-wrap justify-content-center">
-      <a href="index.html" class="nav-link">Início</a>
-      <a href="inserir.html" class="nav-link">Insira sua receita</a>
+      <a href="index.php" class="nav-link">Início</a>
+      <a href="inserir.php" class="nav-link">Insira sua receita</a>
       <a href="cadastro.html" class="nav-link">Conta</a>
     </nav>
 
